--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -620,14 +620,14 @@ body {
 
 .comment__bottom {
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
   align-items: flex-start;
   border-bottom: 1px solid lightgray;
   padding-top: 20px;
   padding-left: 10px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
-  color: #00B7FF;
+  color: #94be6d;
 }
 
 .comment__bottom > h4 {
@@ -655,7 +655,7 @@ body {
 }
 
 .hide_show > .material-icons {
-  color: #1877f2;
+  color:#5B8930;
   font-size: 30px;
 }
 
