--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -38,6 +38,7 @@
 <!-- main body starts -->
 <div class="main__body">
   <!-- sidebar starts -->
+  
   <div class="sidebar">
     {{!-- <div class="sidebarRow">
       <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
@@ -51,6 +52,7 @@
     </div> --}}
 
   </div>
+
   <!-- sidebar ends -->
 
   <!-- feed starts -->
@@ -60,15 +62,9 @@
       <div
         style="
               background-image: url('images/img/_curtis.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Curtis.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Curtis.jpeg" alt="" />
+        <h4>Curtis</h4>
       </div>
       <!-- story ends -->
 
@@ -76,15 +72,9 @@
       <div
         style="
               background-image: url('images/img/_nesho.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Nesho.jpg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Nesho.jpg" alt="" />
+        <h4>Nesho</h4>
       </div>
       <!-- story ends -->
 
@@ -92,15 +82,9 @@
       <div
         style="
               background-image: url('images/img/_sophie.jpeg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Sophie.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Sophie.jpeg" alt="" />
+        <h4>Sophie</h4>
       </div>
       <!-- story ends -->
 
@@ -108,15 +92,9 @@
       <div
         style="
               background-image: url('images/img/_ladan.webp.png');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Ladan.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Ladan.jpeg" alt="" />
+        <h4>Ladan</h4>
       </div>
       <!-- story ends -->
 
@@ -124,15 +102,9 @@
       <div
         style="
               background-image: url('images/img/_brijesh.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Brijesh.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Brijesh.jpeg" alt="" />
+        <h4>Brijesh</h4>
       </div>
       <!-- story ends -->
 
@@ -140,15 +112,9 @@
       <div
         style="
               background-image: url('images/img/_evelina.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Evelina.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Evelina.jpeg" alt="" />
+        <h4>Evelina</h4>
       </div>
       <!-- story ends -->
 
@@ -156,30 +122,18 @@
       <div
         style="
               background-image: url('images/img/_allen.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Allen.jpeg"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Allen.jpeg" alt="" />
+        <h4>Allen</h4>
       </div>
       <!-- story ends -->
       <!-- story starts -->
       <div
         style="
               background-image: url('images/img/_stephen.jpg');
-            "
-        class="story"
-      >
-        <img
-          class="user__avatar story__avatar"
-          src="images/img/Stephen.png"
-          alt=""
-        />
-        <h4>The Axylotls</h4>
+            " class="story">
+        <img class="user__avatar story__avatar" src="images/img/Stephen.png" alt="" />
+        <h4>Stephen</h4>
       </div>
       <!-- story ends -->
     </div>
@@ -193,22 +147,11 @@
           alt=""
         />
 
-        {{! FORM MODIFIED FOR IMAGE }}
-        <form
-          id="new-post-form"
-          action="/posts"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <input type="file" name="image" accept="image/*" /><br />
-          <input
-            id="message"
-            type="text"
-            name="message"
-            value=""
-            placeholder=" Whats on your mind?  {{blank}}"
-          />
-          <input id="submit" type="submit" value="POST" />
+        {{!-- FORM MODIFIED FOR IMAGE --}}
+        <form id="new-post-form" action="/posts" method="post" enctype="multipart/form-data">
+          <input type="file" name="image" accept="image/*"><br>
+          <input id="message" type="text" name="message" value="" placeholder="{{placeholderMessage}}">
+          <input id="submit" type="submit" value="POST">
         </form>
       </div>
     </div>
