--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -32,6 +32,7 @@
 <!-- main body starts -->
 <div class="main__body">
   <!-- sidebar starts -->
+  
   <div class="sidebar">
     {{!-- <div class="sidebarRow">
       <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
@@ -45,6 +46,7 @@
     </div> --}}
 
   </div>
+
   <!-- sidebar ends -->
 
   <!-- feed starts -->
@@ -55,7 +57,7 @@
               background-image: url('images/img/_curtis.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Curtis.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Curtis</h4>
       </div>
       <!-- story ends -->
 
@@ -64,7 +66,7 @@
               background-image: url('images/img/_nesho.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Nesho.jpg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Nesho</h4>
       </div>
       <!-- story ends -->
 
@@ -73,7 +75,7 @@
               background-image: url('images/img/_sophie.jpeg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Sophie.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Sophie</h4>
       </div>
       <!-- story ends -->
 
@@ -82,7 +84,7 @@
               background-image: url('images/img/_ladan.webp.png');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Ladan.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Ladan</h4>
       </div>
       <!-- story ends -->
 
@@ -91,7 +93,7 @@
               background-image: url('images/img/_brijesh.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Brijesh.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Brijesh</h4>
       </div>
       <!-- story ends -->
 
@@ -100,7 +102,7 @@
               background-image: url('images/img/_evelina.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Evelina.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Evelina</h4>
       </div>
       <!-- story ends -->
 
@@ -109,7 +111,7 @@
               background-image: url('images/img/_allen.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Allen.jpeg" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Allen</h4>
       </div>
       <!-- story ends -->
        <!-- story starts -->
@@ -117,7 +119,7 @@
               background-image: url('images/img/_stephen.jpg');
             " class="story">
         <img class="user__avatar story__avatar" src="images/img/Stephen.png" alt="" />
-        <h4>The Axylotls</h4>
+        <h4>Stephen</h4>
       </div>
       <!-- story ends -->
     </div>
@@ -130,7 +132,7 @@
         {{!-- FORM MODIFIED FOR IMAGE --}}
         <form id="new-post-form" action="/posts" method="post" enctype="multipart/form-data">
           <input type="file" name="image" accept="image/*"><br>
-          <input id="message" type="text" name="message" value="" placeholder=" Whats on your mind?  {{blank}}">
+          <input id="message" type="text" name="message" value="" placeholder="{{placeholderMessage}}">
           <input id="submit" type="submit" value="POST">
         </form>
       </div>
