--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
+      <input type="submit" value="Log in">
     </form>
     {{{body}}}
   </body>
