--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+  {{#unless signedIn}}
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form>
+  {{/unless}}
     {{{body}}}
   </body>
 </html>
