--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,8 @@
 <form id="new-user-form" action="/users" method="post">
+  <label for="first_name">First name: </label>
+  <input id="first_name" type="text" name="first_name" value="">
+  <label for="last_name">Last name: </label>
+  <input id="last_name" type="text" name="last_name" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
