--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,3 +1,4 @@
+<h1> Create a new post</h1>
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="">
