--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,5 +1,4 @@
-<button> <a href='../sessions/new'> Log in </a></button>
-
+<h1> Sign-up Page</h1>
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
