--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,6 +2,7 @@
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li>
+  <a href="/posts/{{this._id}}">comments</a>
   {{/each}}
 </ul>
 
