--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -2,6 +2,8 @@
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
+  <label for="username">Username: </label>
+  <input id="username" type="username" name="username" value="">
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
   <input id="submit" type="submit" value="Submit">
