each post has a `view comments` linking to a post page to view comments

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,7 +2,7 @@
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li>
-  <a href="/posts/{{this._id}}">comments</a>
+  <a href="/posts/{{this._id}}">View Comments</a>
   {{/each}}
 </ul>
 
