--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,7 +1,7 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <li>{{this.message}} by {{this.author_name}} on {{this.updatedAt}}</li>
+  <li>{{this.message}} by {{this.author_name}} on {{this.date}}</li>
   {{/each}}
   
 </ul>
