creating mongoose model for comments

--- a/views/posts/post.hbs
+++ b/views/posts/post.hbs
@@ -2,7 +2,7 @@
 
 {{!-- comments go here --}}
 
-<form action="" method="post">
+<form action="/posts/{{post._id}}" method="post">
   <input type="text" name="new-comment" id="new-comment" placeholder="Add new comment here..">
   <input type="submit" value="Submit">
 </form>
