user firstname added , user image partially added

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,11 @@
 <form id="new-user-form" action="/users" method="post">
+  <label for="firstName">First Name: </label>
+  <input id="firstName" type="firstName" name="firstName" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
+  <label for="image">Image: </label>
+  <input id="image" type="file" name="image" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
