need to use comment . save

--- a/views/posts/post.hbs
+++ b/views/posts/post.hbs
@@ -3,6 +3,6 @@
 {{!-- comments go here --}}
 
 <form action="/posts/{{post._id}}" method="post">
-  <input type="text" name="new-comment" id="new-comment" placeholder="Add new comment here..">
+  <input type="text" name="newComment" id="newComment" placeholder="Add new comment here..">
   <input type="submit" value="Submit">
 </form>
