photo upload page now loading, haven't looked into storing the image in the database yet

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -6,3 +6,6 @@
 </ul>
 
 <a class="new-post-link" href="/posts/new">New post</a>
+<br>
+<br>
+<a class="upload-photo" href="/photos/new">Upload your profile photo</a>
