--- a/views/posts/post.hbs
+++ b/views/posts/post.hbs
@@ -1,13 +1,18 @@
 <h1>{{post.message}}</h1>
 
-{{!-- comments go here --}}
+{{! comments go here }}
 <ul>
-  {{#each comments }}
+  {{#each comments}}
     <li>{{this.message}} - {{this.date}}</li>
   {{/each}}
 </ul>
 
 <form action="/posts/{{post._id}}" method="post">
-  <input type="text" name="newComment" id="newComment" placeholder="Add new comment here..">
-  <input type="submit" value="Submit">
+  <input
+    type="text"
+    name="newComment"
+    id="newComment"
+    placeholder="Add new comment here.."
+  />
+  <input type="submit" value="Submit" />
 </form>
