--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,13 @@
 <h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h3>Welcome to {{title}}</h3>
+
+<p>Don't have an account? Sign up now!</p>
+<form id="new-user-form" action="/users" method="post">
+  <label for="email">Email: </label>
+  <input id="email" type="email" name="email" value="">
+  <label for="username">Username: </label>
+  <input id="username" type="username" name="username" value="">
+  <label for="password">Password: </label>
+  <input id="password" type="password" name="password" value="">
+  <input id="submit" type="submit" value="Submit">
+</form>
