--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,10 +4,16 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
+<body>
+{{#if user }}
+  <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form>
+{{else}}
+<a href="/sessions/new">Log in</a>
+  {{!-- <form action='/sessions?_method=CREATE' method='GET'>
+      <input type="button" value="Log in">
+    </form> --}}
+    {{/if}}
     {{{body}}}
-  </body>
-</html>
+</body>
