Cypress test for navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
           {{else}}
             <li>    
               <form action='/sessions/new' method='GET'>
-                <input type="submit" value="Su">
+                <input type="submit" value="Log in">
               </form>
             </li>   
           {{/if}}
