--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,7 +2,7 @@
 
 {{#each posts}}
 <br>
-<div class="card text-center">
+<div class="card text-center w-75">
   <div class="card-header"> 
     <h5>USER: {{this.username}}</h5>
   </div>
