Added divs to each page to differentiate between navbar and body styling. Have added a basic colour to navbar and started styling navbar buttons

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,3 +1,5 @@
+<div class="body_not_navbar">
+
 <h1 class="title">{{title}}</h1>
 <h3>Welcome to {{title}}</h3>
 
@@ -11,3 +13,5 @@
   <input id="password" type="password" name="password" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
+
+</div>
