--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,21 +3,44 @@
   <head>
     <title>{{title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
   </head>
+
   <body>
-  <nav> 
+
+<nav class="navbar" style="background-color: #e3f2fd;">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Acebook</span>
+    {{#if signedIn}}
+      <form class="d-flex" action='/sessions?_method=DELETE' method='POST'>
+        <input class="form-control me-2" type="submit" value="Log Out">
+      </form>
+    {{else}}
+      {{#unless isLoginPage}}
+        <button class="btn btn-outline-secondary" type="button"> 
+          <a href='/sessions/new'> Log in </a>
+        </button>
+      {{/unless}}
+    {{/if}}
+  </div>
+</nav> 
+
+  {{!-- <nav> 
     {{#if signedIn}}
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form>
     {{else}}
       {{#unless isLoginPage}}
-    <button> <a href='/sessions/new'> Log in </a></button>
+    <button> 
+      <a href='/sessions/new'> Log in </a>
+    </button>
       {{/unless}}
     {{/if}}
-  </nav>
+  </nav> --}}
+
     {{{body}}}
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
 </html>
