--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,12 @@
+<div class="body_not_navbar">
+  
 <h1>Timeline</h1>
+
+  <a class="new-post-link" href="/posts/new">Create a new post</a>
+  <br>
+  <a class="upload-photo" href="/photos/new">Upload your profile photo</a>
+  <br>
+
 
 {{#each posts}}
 <br>
@@ -13,8 +21,4 @@
 </div>
 {{/each}}
 
-
-<a class="new-post-link" href="/posts/new">New post</a>
-<br>
-<br>
-<a class="upload-photo" href="/photos/new">Upload your profile photo</a>
+</div>
