--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,6 +1,12 @@
+<div class="body_not_navbar">
+  
 <h1> Create a new post</h1>
 <form id="new-post-form" action="/posts" method="post">
-  <label for="message">Message: </label>
+  <label for="message">Enter a message below: </label>
+  <br>
   <input id="message" type="text" name="message" value="">
+  <br>
+  <br>
   <input type="submit" value="Submit">
 </form>
+</div>
