--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
-body {
-  padding: 50px;
+.body_not_navbar {
+  padding-left: 200px;
+  padding-top: 30px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+.navbar {
+  padding-right: 50px;
+}
+
+/* body {
+  padding-left: 200px;
+  padding-top: 30px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+} */
 
 a {
   color: #00B7FF;
 }
+
+#message {
+  width: 600px; 
+  height: 100px; 
+  border: 1px solid #999999; 
+  padding: 5px; 
+}
+
