Played around with buttons on navbar and added a password validation message on homepage

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -13,5 +13,7 @@
   <input id="password" type="password" name="password" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
+<br>
+<p>Password must be greater than 7 characters and include a capital letter and symbol</p>
 
 </div>
