--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,8 +1,7 @@
+<div class="body_not_navbar">
+
 <h1> Sign-up Page</h1>
 {{errorMessage}}
-{{!-- <div class="error">
-  {{err.message}}
-</div> --}}
 
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
@@ -13,3 +12,4 @@
   <input id="password" type="password" name="password" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
+</div>
