--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
 
   <body>
 
-<nav class="navbar text-dark" style="background-color: #e3f2fd;">
+<nav class="navbar text-dark" style="background-color: #AED9E0;">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">Acebook</span>
     <ul class="nav justify-content-end mb-lg-0">
@@ -52,4 +52,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
+
 </html>
