Added comments page for posts

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -16,6 +16,7 @@
   </div>
   <div class="card-body">
     <p class="card-title"> MESSAGE: {{this.message}} </p>
+    <a class="comments" href="/posts/{{this._id}}">x comments</a>
     {{!-- <p class="card-text">Comment</p> --}}
   </div>
 </div>
