--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -6,6 +6,6 @@
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
+  <input id="password" type="password" id="psw" name="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,16}" title="Must contain at least one number and one uppercase and lowercase letter, one special character, and between 8-16 characters">
   <input id="submit" type="submit" value="Submit">
 </form>
