--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -17,7 +17,7 @@
   <div class="card-body">
     <p class="card-title"><b>Message:</b> {{this.message}} </p>
     <p class="card-title"><b>Likes:</b> {{this.likes}} </p>
-    <button type="button">Like!</button>
+    <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
       {{!-- <p class="card-text">Comment</p> --}}
     </div>
 </div>
