added added divs for friend requests and added requests to user.js

--- a/views/home/myprofile.hbs
+++ b/views/home/myprofile.hbs
@@ -1,1 +1,14 @@
-<h1>Name: {{ user.name }}</h1>
+<div>
+  <h2>Name: {{ user.name }}</h2>
+  <h3>Email: {{user.email}}</h3>
+</div>
+<div id="friends">
+  <h2>FRIENDS</h2>
+</div>
+<div id="sent">
+  <h2>SENT REQUESTS</h2>
+</div>
+
+<div id="received">
+<h2>RECEIVED REQUESTS</h2>
+</div>
