--- a/views/home/myprofile.hbs
+++ b/views/home/myprofile.hbs
@@ -1,14 +1,32 @@
 <div>
-  <h2>Name: {{ user.name }}</h2>
+  <h2>Name: {{user.firstName}}</h2>
   <h3>Email: {{user.email}}</h3>
 </div>
+
 <div id="friends">
   <h2>FRIENDS</h2>
+  <ul>
+    {{#each friends }}
+    <li>{{this.name}} - {{this.email}}</li>
+    {{/each}}
+  </ul>
 </div>
+
 <div id="sent">
   <h2>SENT REQUESTS</h2>
+  <h4><a href="/addFriends">FIND FRIENDS</a></h4>
+  <ul>
+    {{#each sent }}
+    <li>{{this.name}} - {{this.email}}</li>
+    {{/each}}
+  </ul>
 </div>
 
 <div id="received">
-<h2>RECEIVED REQUESTS</h2>
+  <h2>RECEIVED REQUESTS</h2>
+  <ul>
+    {{#each received }}
+    <li>{{this.name}} - {{this.email}}</li>
+    {{/each}}
+  </ul>
 </div>
