--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,5 +1,22 @@
 <div class="body_not_navbar">
 
-<h1> Profile Page</h1>
+<h1> {{user.username}}'s Profile Page</h1>
+{{#each posts}}
+<br>
+<div class="card text-center w-75">
+  <div class="card-header">
+    <h5>USER: <a href="/users/profile/{{this.user._id}}">{{this.username}}</a></h5>
+  </div>
+  <div class="card-body">
+    <p class="card-title"><b>Message:</b> {{this.message}} </p>
+    <p class="card-title"><b>Likes:</b> {{this.likes}} </p>
+    <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
+      {{!-- <p class="card-text">Comment</p> --}}
+    </div>
+    <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">x comments</a></p>
+    {{!-- <p class="card-text">Comment</p> --}}
+  </div>
 
+{{/each}}
 </div>
+
