like button & tests

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -4,7 +4,7 @@
   <li>{{this.message}} by {{this.author_name}} on {{this.date}}
   </li>
       <form action="/posts/{{this._id}}/likes" method="post">
-        <button type="button">likes: {{this.likes.count}}</button>
+        <button id= "like-button" type="submit">likes: {{this.likes.count}}</button>
       </form>
       <br>{{#each this.comments}}
       {{this.message}} Posted by {{this.author_name}} on {{this.date}} </br>
