--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,9 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-   <li>{{this.name}} <img src="data:image/png;base64,{{this.image}}" alt="">  {{this.message}}</li>
-    
+    <li>{{this.name}}
+      <img src="data:image/png;base64,{{this.image}}" alt="" />
+      {{this.message}}</li>
 
     <a href="/posts/{{this._id}}">View Comments</a>
   {{/each}}
