--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,11 +1,16 @@
-<form id="new-user-form" action="/users" method="post" enctype="multipart/form-data">
+<form
+  id="new-user-form"
+  action="/users"
+  method="post"
+  enctype="multipart/form-data"
+>
   <label for="firstName">First Name: </label>
-  <input id="firstName" type="firstName" name="firstName" value="">
+  <input id="firstName" type="firstName" name="firstName" value="" />
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="" />
   <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
+  <input id="password" type="password" name="password" value="" />
   <label for="image">Image: </label>
-  <input id="image" type="file" name="image" value=""> 
-  <input id="submit" type="submit" value="Submit">
+  <input id="image" type="file" name="image" value="" />
+  <input id="submit" type="submit" value="Submit" />
 </form>
