photo uploads working

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -4,7 +4,7 @@
 
   <a class="new-post-link" href="/posts/new">Create a new post</a>
   <br>
-  <a class="upload-photo" href="/photos/new">Upload your profile photo</a>
+  <a class="upload-photo" href="/images">Upload a photo</a>
   <br>
 <br>
 
