photo uploader completed

--- a/views/images/index.ejs
+++ b/views/images/index.ejs
@@ -1,6 +1,12 @@
-<br>
-<a class="upload-photo" href="/images">Upload a photo</a>
-<br>
+<div class="body_not_navbar">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
+    <h1>Photos list</h1>
+    
+      <a class="new-post-link" href="/posts/new">Create a new post</a>
+      <br>
+      <a class="upload-photo" href="/images">Upload a photo</a>
+      <br>
+    <br>
 
 <h1>Uploaded Images</h1>
     <div>
