--- a/views/addFriends/index.hbs
+++ b/views/addFriends/index.hbs
@@ -2,7 +2,14 @@
   <input type="text" name="searchTerm" id="searchTerm" placeholder="Search Here.." required>
   <input type="submit" value="Find">
 </form>
-
 <ul>
-  {{!-- displays search results --}}
+  {{!-- display search results --}}
+  {{#each results }}
+    <li>
+      <img src="" alt="">
+      <h4>{{this.name}}</h4>
+      <p>{{this.email}}</p>
+      <form action="/" method="post">Send Request</form>
+    </li>
+  {{/each}}
 </ul>
