--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -30,10 +30,10 @@
 <br>
 <div class="card text-center w-75">
   <div class="card-header"> 
-    <h5>User: {{post.username}}</h5>
+    <h5>User: {{this.username}}</h5>
   </div>
   <div class="card-body">
-    <p class="card-title"> Comment: {{post.message}} </p>
+    <p class="card-title"> Comment: {{this.comment}} </p>
     {{!-- <p class="card-text">Comment</p> --}}
   </div>
 </div>
