--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -12,7 +12,7 @@
 <br>
 <div class="card text-center w-75">
   <div class="card-header">
-    <h5>USER: <a href="/users/profile/{{this.user._id}}">{{this.user.username}}</a></h5>
+    <h5>USER: <a href="/users/profile/{{this.user._id}}">{{this.username}}</a></h5>
   </div>
   <div class="card-body">
     <p class="card-title"><b>Message:</b> {{this.message}} </p>
