--- a/views/addFriends/index.hbs
+++ b/views/addFriends/index.hbs
@@ -2,14 +2,15 @@
   <input type="text" name="searchTerm" id="searchTerm" placeholder="Search Here.." required>
   <input type="submit" value="Find">
 </form>
-<ul>
-  {{!-- display search results --}}
+<div id="results">
   {{#each results }}
-    <li>
-      <img src="" alt="">
-      <h4>{{this.name}}</h4>
+    <div class="user">
+      <img src="data:image/png;base64, {{this.image}}" alt="profile pic">
+      <h4>{{this.firstName}}</h4>
       <p>{{this.email}}</p>
-      <form action="/" method="post">Send Request</form>
-    </li>
+      <form action="/" method="post">
+        <button>Send Request</button>
+      </form>
+    </div>
   {{/each}}
-</ul>
+</div>
