profile page comeplete

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,12 @@
               <form action='/posts/new' method='GET'>
                 <input type="submit" value="New post">
               </form>
-            </li>                 
+            </li> 
+            <li>
+              <form action='/users/account' method='GET'>
+                <input type="submit" value="My Profile">
+              </form>
+            </li>                
           {{else}}
             <li>    
               <form action='/sessions/new' method='GET'>
