--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -20,9 +20,14 @@
     <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
       {{!-- <p class="card-text">Comment</p> --}}
     </div>
-    <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">x comments</a></p>
+    <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">{{commentCount}} comments</a></p>
     {{!-- <p class="card-text">Comment</p> --}}
   </div>
-
 {{/each}}
+
+<p>Start</p>
+{{#each images}}
+  <img src="{{this.link}}">
+{{/each}}
+<p>End</p>
 </div>
