--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -13,6 +13,7 @@
 <div class="card text-center w-75">
   <div class="card-header">
     <h5>USER: <a href="/users/profile/{{this.user._id}}">{{this.username}}</a></h5>
+    <img id="profilepic" src="{{user.profilepic}}">
   </div>
   <div class="card-body">
     <p class="card-title"><b>Message:</b> {{this.message}} </p>
@@ -23,9 +24,9 @@
   </div>
 {{/each}}
 
-<p>Start</p>
+{{!-- <p>Start</p>
 {{#each images}}
   <img src="{{this.link}}">
 {{/each}}
-<p>End</p>
+<p>End</p> --}}
 </div>
